force-app/main/default/objects/Board_Member_Type__c/Board_Member_Type__c.object-meta.xml
<CustomObject>
    <description>Config object: the types of member on the (single) board — JCRC Recruited, UJA Appointed, UJA Observer. Each type sets the standard term length and base annual giving commitment applied to a member's Board Term. JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Board Member Type</label>
    <nameField>
        <label>Member Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Board Member Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>