force-app/main/default/objects/Board_Member_Type__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Only active member types are offered for new Board Terms. JSI-123 / Jason Ott.</description>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>