force-app/main/default/objects/Board_Member_Type__c/fields/Default_Term_Length_Years__c.field-meta.xml
<CustomField>
    <fullName>Default_Term_Length_Years__c</fullName>
    <description>Standard term length for this member type (6 years for JCRC/UJA; 1 year for UJA Observer). Drives the auto-filled Board Term End Date, the auto-created per-year records, and Must Roll Off. JSI-123 / Jason Ott.</description>
    <label>Default Term Length (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>